--- a/AVSToJVSConversion/AVSToJVSConversion.csproj
+++ b/AVSToJVSConversion/AVSToJVSConversion.csproj
@@ -113,6 +113,9 @@
     <Compile Include="DLL\DBConnection.cs" />
     <Compile Include="BLL\InitializeTables.cs" />
     <Compile Include="BLL\InputProcessor.cs" />
+    <Compile Include="Views\test.xaml.cs">
+      <DependentUpon>test.xaml</DependentUpon>
+    </Compile>
     <Page Include="Content\Resources\styles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -133,6 +136,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\test.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
