--- a/AVSToJVSConversion/App.config
+++ b/AVSToJVSConversion/App.config
@@ -29,7 +29,9 @@
 
   </log4net>
   <connectionStrings>
-    <add name="dbconnection" connectionString="Data Source=DLURARO3230978\SQLSERVER2014;Initial Catalog=ConversionDB;Integrated Security=false;User ID=sa;Password=hrhk" providerName="System.Data.SqlClient"/>
+    <!--<add name="dbconnection" connectionString="Data Source=DLURARO3230978\SQLSERVER2014;Initial Catalog=ConversionDB;Integrated Security=false;User ID=sa;Password=hrhk" providerName="System.Data.SqlClient"/>-->
+    <add name="dbconnection" connectionString="Data Source=DESKTOP-U3VDBQQ\SQLSERVER2016;Initial Catalog=ConversionDB;Integrated Security=false;User ID=sa;Password=hrhk" providerName="System.Data.SqlClient"/>
+  
   </connectionStrings>
 
 
