--- a/AVSToJVSConversion/AVSToJVSConversion.csproj
+++ b/AVSToJVSConversion/AVSToJVSConversion.csproj
@@ -13,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <TargetFrameworkProfile />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,7 +27,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -104,18 +105,24 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BLL\ExcelReader.cs" />
     <Compile Include="BLL\Operations.cs" />
     <Compile Include="BLL\Utility.cs" />
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Common\CustomConverter.cs" />
     <Compile Include="BLL\IncludeFileHandler.cs" />
     <Compile Include="Common\Enumerations.cs" />
+    <Compile Include="Common\Helpers.cs" />
     <Compile Include="DLL\DBConnection.cs" />
     <Compile Include="BLL\InitializeTables.cs" />
     <Compile Include="BLL\InputProcessor.cs" />
     <Page Include="Content\Resources\styles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Setting.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -127,9 +134,15 @@
     </Compile>
     <Compile Include="BLL\LineValidator.cs" />
     <Compile Include="DLL\OperationDao.cs" />
-    <Compile Include="ViewModel\Command.cs" />
-    <Compile Include="ViewModel\DelegateCommand.cs" />
+    <Compile Include="Model\SettingModel.cs" />
+    <Compile Include="ViewModel\DialogService.cs" />
+    <Compile Include="ViewModel\IDialog.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="ViewModel\RelayCommand.cs" />
+    <Compile Include="ViewModel\SettingViewModel.cs" />
+    <Compile Include="Views\Setting.xaml.cs">
+      <DependentUpon>Setting.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -153,6 +166,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Content\Documents\Conversion.docx" />
+    <None Include="Content\Documents\Conversion.pdf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -193,7 +208,30 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Logs\" />
-    <Folder Include="Model\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\setting.png" />
+    <Resource Include="Content\Images\settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\setting.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\help.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\help-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\help-icon1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Content\Images\help1.png" />
+    <Resource Include="Content\Images\help2.png" />
+    <Resource Include="Content\Images\help3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Images\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
